# brutenib

./: CMakeLists.txt  LICENSE  Makefile  README.md  br_oneshot  br_run_rocker.sh  br_trim-shaep.awk  bruteact.sh  brutenib  brutenib.sh  brutetype.sh  manytype.sh  mol2filter.cpp  mol2split.cpp  nibscore.sh  oneact.sh  oneshot.sh  rankcorr.R  run_rocker.sh  smiles2train.cpp  trim-shaep.awk
src/: mol2filter.cpp  mol2split.cpp  smiles2train.cpp
